Refactor: page index helper now compares two indexable pages